- subpackages (to allow install along other JDK/JRE and to limit dependencies   for the base functionality) - %install - %files - builds now :)
Changed files:
    TODO -> 1.2
    icedtea6.spec -> 1.3

--- a/TODO
+++ b/TODO
@@ -1,1 +1,4 @@
+- better descriptions
+- Polish descriptions for subpackages
 - browser plugin
+- check and improve jre Provides (though the APIs should be java-* or java(*), not like in current java-sun-jre)
