--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
+- pass %{rpmcflags} to build
+- make the i486 build a i486 build, not i586 build ('zero' instead of hotspot?)
 - better descriptions
 - Polish descriptions for subpackages
-- browser plugin
 - Java WebStart on x86_64
-- pass %{rpmcflags} to build
 - check and improve jre Provides (though the APIs should be java-* or java(*),
   not like in current java-sun-jre)
