--- a/TODO
+++ b/TODO
@@ -1,7 +1,5 @@
-- pass %{rpmcflags} to build
-- make the i486 build a i486 build, not i586 build ('zero' instead of hotspot?)
-- better descriptions
-- Polish descriptions for subpackages
+- maybe build Shark VM, at least on i486, as the zero-assembly VM is very slow
 - javaws manual on x86_64 (it is not installed for some reason)
 - check and improve jre Provides (though the APIs should be java-* or java(*),
   not like in current java-sun-jre)
+- pass %{rpmcflags} to build
